--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://imprintly.onrender.com/" />
+    <meta property="og:url" content="https://imprintly-demo.onrender.com/" />
     <meta
       property="og:title"
       content="Imprintly - AI-Powered eBook Creation Platform"
@@ -38,7 +38,7 @@
     />
     <meta
       property="og:image"
-      content="https://imprintly.onrender.com/images/hero-image.png"
+      content="https://imprintly-demo.onrender.com/images/hero-image.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -47,7 +47,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://imprintly.onrender.com/" />
+    <meta
+      property="twitter:url"
+      content="https://imprintly-demo.onrender.com/"
+    />
     <meta
       property="twitter:title"
       content="Imprintly - AI-Powered eBook Creation Platform"
@@ -58,7 +61,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://imprintly.onrender.com/images/hero-image.png"
+      content="https://imprintly-demo.onrender.com/images/hero-image.png"
     />
     <meta property="twitter:creator" content="@UsualLearner" />
 
@@ -76,7 +79,7 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://imprintly.onrender.com/" />
+    <link rel="canonical" href="https://imprintly-demo.onrender.com/" />
 
     <!-- Preconnect to external domains for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
